  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/?? IAlibay, BFedder, inomag, Agorfa, aya9aladdin, shudipto-amin, cbouy,
         HenokB, umak1106, tamandeeps, Mrqeoqqt, megosato, AnirG, rishu235,
         mtiberti, manishsaini6421, Sukeerti1, robotjellyzone, markvrma, alescoulie,
         mjtadema, PicoCentauri, Atharva7K, aditi2906, orbeckst

 * 2.2.0

Fixes
  * Iterating a SingleFrameReaderBase trajectory now rewinds the
    reader, resetting any modified trajectory attributes to those
    read from file. Fixes behavior that was previously undefined (Issue #3423)
  * Fixed Reader.copy() did not preserve convert_units=False (see PR #3642) 
  * Fixed `OpenMMTopologyParser` not working when some or none of the elements
    are present in the openmm topology (Issue #3317, PR #3511).
  * Remove None from filenames in analysis.hole.HoleAnalysis (PR #3650)
  * Fixed Numpy deprecation warnings about elementwise comparisons.
    (Issue #3535, PR #3619)
  * Fixed encore.covariance.covariance_matrix not working when providing
    an external reference (Issue #3539, PR #3621)
  * Fixed LinearDensity not working with grouping='residues' or 'segments'
    (Issue #3571, PR #3572)
  * LinearDensity now uses the definition of Avogadro's number from 
    MDAnalysis.units, which has more significant digits. 
    (Issue #3571, PR #3572)
  * MOL2 can read files without providing optional columns:
    subst_id, subst_name and charge. (Issue #3385, PR #3598)
  * When converting an AtomGroup to an RDKit molecule (PR #3044):
    - the atoms are now in the same order
    - the output of `atom.GetMonomerInfo().GetName()` now follows the
      guidelines for PDB files while the original name is still available
      through `atom.GetProp("_MDAnalysis_name")`
    - using `NoImplicit=False` should no longer throw a `SanitizationError`