@@ -95,6 +95,7 @@ jobs:
       h5py
       tqdm
       threadpoolctl
+      fasteners
     displayName: 'Install dependencies'
   # for wheel install testing, we pin to an
   # older NumPy, the oldest version we support and that
