@@ -6,6 +6,7 @@ dependencies:
   - chemfiles>=0.10
   - codecov
   - cython
+  - fasteners
   - griddataformats
   - gsd
   - h5py
