@@ -16,11 +16,15 @@ The rules for this file:
 ??/??/?? IAlibay, BFedder, inomag, Agorfa, aya9aladdin, shudipto-amin, cbouy,
          HenokB, umak1106, tamandeeps, Mrqeoqqt, megosato, AnirG, rishu235,
          mtiberti, manishsaini6421, Sukeerti1, robotjellyzone, markvrma, alescoulie,
-         mjtadema, PicoCentauri, Atharva7K, aditi2906, orbeckst
+         mjtadema, PicoCentauri, Atharva7K, aditi2906, orbeckst,  yuxuanzhuang
 
  * 2.2.0
 
 Fixes
+  * Fix the competition when generating offsets from multiple processes by
+    using a interprocess file lock. (Issue #1988, PR #3375)
+  * Fix the error when trying to load a corrupted offset file (Issue #3230
+    PR #3375)  
   * Iterating a SingleFrameReaderBase trajectory now rewinds the
     reader, resetting any modified trajectory attributes to those
     read from file. Fixes behavior that was previously undefined (Issue #3423)
@@ -71,6 +75,7 @@ Enhancements
     keyword (Issue #3605)
 
 Changes
+  * `fasteners` package is now a core dependency (Issues #3230, #1988, PR #3375)
   * The minimm Python, NumPy, and SciPy versions (following NEP29) are now 3.8, 
     1.19, and 1.5.0; GSD now also has a minimum version of 1.9.3 and networkx
     has minimum version 2.0 (Issue #3665)
